k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-default-deny
  namespace: fastapi
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-allow-dns
  namespace: fastapi
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fastapi-allow-ingress-traffic
  namespace: fastapi
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  policyTypes:
    - Ingress
  ingress:
    - {}
